// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerSubtitle should render 1`] = `
<SubtitleWrapper>
  <SubtitleText>
    <h1>
      Hey
    </h1>
  </SubtitleText>
</SubtitleWrapper>
`;

exports[`BannerSubtitle should render child text  1`] = `
<SubtitleWrapper>
  <SubtitleText>
    And here is a test subtitle!
  </SubtitleText>
</SubtitleWrapper>
`;
